[package]
name = "ai-image-captioner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.22"
image = "0.24"
anyhow = "1.0"
dotenvy = "0.15"

[profile.release]
opt-level = 3